--- a/css/robinsonsarah01.css
+++ b/css/robinsonsarah01.css
@@ -42,7 +42,7 @@ div.project {
     position: relative;
     border: 1px solid black;
     display: inline-block;
-    background-color: white; /* For when there's no background image */
+    /*background-color: white;  For when there's no background image */
 }
 
 div.project-inner {
@@ -55,6 +55,7 @@ div.project-inner {
     padding-top: 15%;
     padding-left: 14%;
     padding-right: 14%;
+    z-index: 1;
 }
 
 div.project::before {
@@ -79,4 +80,45 @@ span.extra-desc {
     span.extra-desc{
         display: none;
     }
+}
+
+/* Project backgrounds - use pixlr to make them transparent but not let the page background bleed through.*/
+
+div.project.routeplanner::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    /*width: 30%;*/
+    border-radius: 50%;
+    background-color: white;
+    background: url(routeplanner-dataset-transparent.png);
+}
+
+div.project.backsafe::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    /*width: 30%;*/
+    border-radius: 50%;
+    background-color: white;
+    background: url(backsafe-home-transparent.png);
+}
+
+div.project.tetris::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    /*width: 30%;*/
+    border-radius: 50%;
+    background-color: white;
+    background: url(java-tetris-transparent.png);
 }
