--- a/css/robinsonsarah01.css
+++ b/css/robinsonsarah01.css
@@ -1,7 +1,7 @@
 body {
     margin-left: auto;
     margin-right: auto;
-    width: 95%;
+    /* width: 95%; */
     min-width: 200px;
     text-align: center;
     font-family: "Fauna One", sans-serif;
