--- a/css/robinsonsarah01.css
+++ b/css/robinsonsarah01.css
@@ -167,3 +167,29 @@ div.project.ihart::after {
     background-color: white;
     background: url(ihart-server.png);
 }
+
+div.project.ihart-2::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    /*width: 30%;*/
+    border-radius: 50%;
+    background-color: white;
+    background: url(ihart-repo-transparent.png);
+}
+
+div.project.politeness::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    /*width: 30%;*/
+    border-radius: 50%;
+    background-color: white;
+    background: url(politeness-gauge-transparent.png);
+}
