More updates to experience page.

--- a/experience/experience.css
+++ b/experience/experience.css
@@ -21,5 +21,14 @@ h1 , h2, h3, h4, h5, h6 {
 }
 
 .chip {
-    margin: 4px auto;
+    margin: 4px 2px;
+}
+
+.collapsible-header {
+    line-height: 1.5;
+    padding: 1rem;
+}
+
+.collapsible-body {
+    background-color: #fafafa;
 }
